Fix path and spelling

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <script src="/pixel.js" type="text/javascript"></script>
+    <script src="pixel/pixel.js" type="text/javascript"></script>
     <style>
         #disc{z-index:0;text-align:center;margin-top:25%;}
         .pixel{z-index:1}
     </style>
 </head>
 <body>
-    <p id="disc">I'm going to diealone</p>
+    <p id="disc">I'm going to decay alone</p>
 </body>
