Make path relative

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <script src="pixel/pixel.js" type="text/javascript"></script>
+    <script src="./pixel.js" type="text/javascript"></script>
     <style>
         #disc{z-index:0;text-align:center;margin-top:25%;}
         .pixel{z-index:1}
