--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <title>Decay</title>
     <script src="./pixel.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/rougetimelord/Title/220f02d63be9180b02a5c9f572bc789af9c9dcef/title.js"></script>
+    <script type="text/javascript">titleChange("Pixel decay")</script>
     <style>
         #disc{z-index:0;text-align:center;margin-top:25%;}
         .pixel{z-index:1}
