--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">titleChange("Pixel decay")</script>-->
     <style>
         #disc{z-index:0;text-align:center;margin-top:25%;}
-        .pixel{z-index:1}
+        .pixel{z-index:1;margin:0px;}
     </style>
 </head>
 <body>
