--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         #disc{z-index:0;text-align:center;margin-top:25%;}
         .pixel{z-index:1;margin:0px;}
+        body{margin:0px;}
     </style>
 </head>
 <body>
