Add random letters
Now we have letters that change every 50 milliseconds. This required some new randoms to be added along with a new class and jquery (my love but also the bane of my aesthetic code wishes). Randomly generated fonts and letters added. Need to see if there's some garbage collection that can be done.

--- a/index.html
+++ b/index.html
@@ -1,39 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <head>
     <title>Decay</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="./pixel.js" type="text/javascript"></script>
     <!--<script type="text/javascript" src="https://cdn.rawgit.com/rougetimelord/Title/220f02d63be9180b02a5c9f572bc789af9c9dcef/title.js"></script>
     <script type="text/javascript">titleChange("Pixel decay")</script>-->
-    <metas>
-        <!--Chrome, firefox and opera-->
-        <meta name="theme-color" content="#808080">
-        <!-- Windows Phone -->
-        <meta name="msapplication-navbutton-color" content="#808080">
-        <browsers>
-            <meta charset="UTF-8">
-            <meta name="description" content="An edgy art piece">
-            <meta name="author" content="Rouge">
-            <meta name="keywords" content="random, angsty, Rouge, pixels">
-        </browsers>
-        <apple>
-            <meta name="apple-mobile-web-app-capable" content="yes">
-            <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-            <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-        </apple>
-        <og>
-            <meta name="og:title" content="Pixel">
-            <meta name="og:author" content="Rouge">
-            <meta name="og:description" content="An edgy art piece">
-            <meta name="og:url" content="http://rougetimelord.github.io/pixel">
-        </og>
-        <twitter>
-            <meta name="twitter:title" content="Pixel">
-            <meta name="twitter:description" content="An edgy art piece">
-        </twitter>
-    </metas>
+    <!--Chrome, firefox and opera-->
+    <meta name="theme-color" content="#808080">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#808080">
+    <meta charset="UTF-8">
+    <meta name="description" content="An edgy art piece">
+    <meta name="author" content="Rouge">
+    <meta name="keywords" content="random, angsty, Rouge, pixels">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="og:title" content="Pixel">
+    <meta name="og:author" content="Rouge">
+    <meta name="og:description" content="An edgy art piece">
+    <meta name="og:url" content="http://rougetimelord.github.io/pixel">
+    <meta name="twitter:title" content="Pixel">
+    <meta name="twitter:description" content="An edgy art piece">
     <style>
         #disc{z-index:0;text-align:center;margin-top:25%;}
         .pixel{z-index:1;margin:0px;}
+        .letter {z-index: -1;margin: 0px;}
         body{margin:0px;overflow-x:hidden;overflow-y:hidden;}
     </style>
 </head>
