--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Decay</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="./pixel.js" type="text/javascript"></script>
+    <script>
+        (function (a, e, f, g, b, c, d) { a.GoogleAnalyticsObject = b; a[b] = a[b] || function () { (a[b].q = a[b].q || []).push(arguments) }; a[b].l = 1 * new Date; c = e.createElement(f); d = e.getElementsByTagName(f)[0]; c.async = 1; c.src = g; d.parentNode.insertBefore(c, d) })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga"); ga("create", "UA-50648028-3", "auto"); ga("send", "pageview");
+    </script>
     <!--<script type="text/javascript" src="https://cdn.rawgit.com/rougetimelord/Title/220f02d63be9180b02a5c9f572bc789af9c9dcef/title.js"></script>
     <script type="text/javascript">titleChange("Pixel decay")</script>-->
     <!--Chrome, firefox and opera-->
